--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "etongfu",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^12.12.14",
     "rollup": "^1.27.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-buble": "^0.19.8",
