--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "etongfu",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "@types/node": "^12.12.14",
     "rollup": "^1.27.2",
     "rollup-plugin-babel": "^4.3.3",
